--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -38,6 +38,35 @@
 
     <!-- TODO #4 - Loop over the search results to display all job fields. -->
 
+    <div>
+        <table class="job-listing" th:each="job : ${jobs}">
+            <tr>
+                <th>ID:</th>
+                <td th:text="${job.id}"></td>
+            </tr>
+            <tr>
+                <th>Job Title:</th>
+                <td th:text="${job.name}"></td>
+            </tr>
+            <tr>
+                <th>Employer:</th>
+                <td th:text="${job.employer}"></td>
+            </tr>
+            <tr>
+                <th>Location:</th>
+                <td th:text="${job.location}"></td>
+            </tr>
+            <tr>
+                <th>Position Type:</th>
+                <td th:text="${job.positionType}"></td>
+            </tr>
+            <tr>
+                <th>Skill:</th>
+                <td th:text="${job.coreCompetency}"></td>
+            </tr>
+        </table>
+    </div>
+
 </div>
 
 </body>
